orm-tests/tests/snapshots/query_code_block_deprecated__complex_code_block_with_sweet_macro_block_and_object_partial_and_arithementic_ops.snap
---
source: orm-tests/tests/query_code_block_deprecated.rs
expression: created_stats_statement.to_raw()
---
CREATE weapon_stats SET averageStrength = {
LET $strengths = (SELECT VALUE strength FROM weapon);

LET $total = math::sum($strengths);

LET $count = array::len($strengths);

RETURN math::ceil(((($total / $count) * ($count * $total)) / ($total + 4)) * 100);
};
